<resources>
    <string name="app_name">Asclepius</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="result">Hasil Analisis</string>
    <string name="no_media">No media selected!</string>
    <string name="success_pick_media">Success pick a media..</string>
    <string name="image_preview">Image preview</string>
    <string name="something_wrong_try_again">Something was wrong, try it again with different image</string>
    <string name="dark_mode">Dark mode\t</string>
    <string name="related_news">Related News</string>
    <string name="result_text">Result</string>
</resources>