<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            app:navigationIconTint="?attr/colorPrimary"
            app:title="@string/app_name" />

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Note: A RecyclerView can also be used -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!-- Scrollable content -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/result_image"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:contentDescription="@string/app_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_place_holder" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/first_result"
                android:layout_marginTop="20dp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/second_result"
                app:layout_constraintTop_toBottomOf="@id/result_image">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/colorOnPrimary"
                        style='@style/TextAppearance.Material3.HeadlineMedium'
                        android:text="@string/result_text" />

                    <TextView
                        android:id="@+id/tvFirstLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/colorOnPrimary"
                        android:layout_gravity="center"
                        style="@style/TextAppearance.Material3.HeadlineSmall"
                        tools:text="Cancer" />

                    <TextView
                        android:id="@+id/tvFirstScore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="?attr/colorOnPrimary"
                        style="@style/TextAppearance.Material3.HeadlineSmall"
                        tools:text="96%" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/second_result"
                android:layout_marginTop="20dp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/first_result"
                app:layout_constraintTop_toBottomOf="@id/result_image">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/colorOnPrimary"
                        style='@style/TextAppearance.Material3.HeadlineMedium'
                        android:text="@string/result_text" />

                    <TextView
                        android:id="@+id/tvSecondLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/colorOnPrimary"
                        android:layout_gravity="center"
                        style="@style/TextAppearance.Material3.HeadlineSmall"
                        tools:text="Cancer" />

                    <TextView
                        android:id="@+id/tvSecondScore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="?attr/colorOnPrimary"
                        style="@style/TextAppearance.Material3.HeadlineSmall"
                        tools:text="96%" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/standard_bottom_sheet"
        style="@style/Widget.Material3.BottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Drag handle for accessibility -->
        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
            android:id="@+id/drag_handle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_related_articles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12sp"
            android:textSize="16sp"
            android:text="@string/related_news"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/first_result" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_related_articles"
            tools:listitem="@layout/item_list"/>


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
